Fin de la seccion 7

--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12">
+    <div class="col-md-12">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Barra de progreso</h4>
@@ -16,14 +16,14 @@
 </div>
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
         <div class="card">
             <div class="card-body">
                 <app-incrementador (actualizaValor)="progreso1=$event" [progreso]="progreso1" nombre="progress azul"></app-incrementador>
             </div>
         </div>
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
         <div class="card">
             <div class="card-body">
                 <app-incrementador (actualizaValor)="progreso2=$event" [progreso]="progreso2" nombre="progress verde"></app-incrementador>
