--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-6" *ngFor="let grafico of graficosArray">
+    <div class="col-md-6" *ngFor="let grafico of graficosArray">
         <div class="card">
             <div class="card-body">
                 <app-grafico-dona [leyenda]="grafico.leyenda" [labels]="grafico.labels" [data]="grafico.data" [type]="grafico.type"></app-grafico-dona>
